--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://dawood96.github.io/davidshammas", 
+  "homepage": "https://dshammas.github.io/davidshammas", 
   "version": "0.1.0",
   "private": true,
   "dependencies": {
